err/pdt.err
Listing '.'...
Listing './bin'...
Compiling './bin/chop_nppes_public.py'...
Compiling './bin/combine_nppes_pecos_org_fhir.py'...
Compiling './bin/combine_nppes_pecos_pract_fhir.py'...
Compiling './bin/create_combined_indexes.py'...
Compiling './bin/create_pecos_compiled_indexes.py'...
Compiling './bin/create_pecos_indexes.py'...
Compiling './bin/create_provider_indexes.py'...
Compiling './bin/csv2fhir_public.py'...
Compiling './bin/csv2mlvs.py'...
Compiling './bin/csv2pjson_public.py'...
Compiling './bin/json_schema_check.py'...
Compiling './bin/json_schema_check_fhir.py'...
Compiling './bin/load_nppes_and_pecos.py'...
Compiling './bin/load_pecos.py'...
Compiling './bin/loadnppes.py'...
Compiling './bin/makepecosdocs.py'...
***   File "./bin/makepecosdocs.py", line 192
    print json.dumps(d, indent=4)
             ^
SyntaxError: invalid syntax

Compiling './bin/pull_new_files_ready.py'...
Compiling './bin/pull_pecos.py'...
Compiling './bin/vnpi.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/jdt'...
Listing './lib/python3.5/site-packages/jdt-0.2.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/luhn-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pdt'...
Listing './lib/python3.5/site-packages/pdt/fhir_json_schema'...
Compiling './lib/python3.5/site-packages/pdt/makepecosdocs.py'...
***   File "./lib/python3.5/site-packages/pdt/makepecosdocs.py", line 192
    print json.dumps(d, indent=4)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pdt/pjson'...
Listing './lib/python3.5/site-packages/pdt-0.8.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/validate_email-1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
